# VirtualKeyboard

./: CMakeLists.txt  VirtualKeyboard.pri  VirtualKeyboard.pro
src/: cursormonitor.cpp  cursormonitor.h  keyboard.qrc  keyboard.qss  keyboardwidget.cpp  keyboardwidget.h  keyboardwidget.ui  main.cpp  virtualkeyboard.cpp  virtualkeyboard.h  x11keyboard.cpp  x11keyboard.h
